# weewx_meteohub_converter

./: .gitignore  README.md  dirtree.py  pyproject.toml  setup.cfg  wm_convert.py
config/: csv.conf
tests/: test_importer.py  test_sensor.py  test_weewx_meteohub.py
weewx_meteohub/: importer.py  sensor.py
