[tool.poetry]
name = "weewx_meteohub"
version = "0.1.0"
description = ""
authors = ["Andre Rupprich <andre@xentux.de>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.3"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
